# server/docs/swagger.yaml
@@ -1579,6 +1579,47 @@ definitions:
         format: int64
         type: integer
     type: object
+  secret_svc.ReadSecretRequest:
+    properties:
+      key:
+        type: string
+    type: object
+  secret_svc.ReadSecretResponse:
+    properties:
+      exists:
+        type: boolean
+      secret:
+        $ref: '#/definitions/secret_svc.Secret'
+    type: object
+  secret_svc.Secret:
+    properties:
+      id:
+        description: Unique identifier for the secret
+        type: string
+      key:
+        description: Identifier for the secret
+        type: string
+      readers:
+        description: Slugs of services/users who can read the secret
+        items:
+          type: string
+        type: array
+      value:
+        description: Plaintext value (only stored temporarily in memory, if at all)
+        type: string
+      writers:
+        description: Slugs of services/users who can modify the secret
+        items:
+          type: string
+        type: array
+    type: object
+  secret_svc.WriteSecretRequest:
+    properties:
+      secret:
+        $ref: '#/definitions/secret_svc.Secret'
+    type: object
+  secret_svc.WriteSecretResponse:
+    type: object
   source_svc.CheckoutRepoRequest:
     properties:
       password:
@@ -3862,6 +3903,70 @@ paths:
       summary: List Nodes
       tags:
       - Registry Svc
+  /secret-svc/secret:
+    post:
+      consumes:
+      - application/json
+      description: Fetch a secret by key, if authorized
+      operationId: readSecret
+      parameters:
+      - description: Read Secret Request
+        in: body
+        name: body
+        schema:
+          $ref: '#/definitions/secret_svc.ReadSecretRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Read Secret Response
+          schema:
+            $ref: '#/definitions/secret_svc.ReadSecretResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Read Secret
+      tags:
+      - Secret Svc
+    put:
+      consumes:
+      - application/json
+      description: Write a secret if authorized
+      operationId: writeSecret
+      parameters:
+      - description: Write Secret Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/secret_svc.WriteSecretRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Write Secret Response
+          schema:
+            $ref: '#/definitions/secret_svc.WriteSecretResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Write Secret
+      tags:
+      - Secret Svc
   /source-svc/repo/checkout:
     post:
       consumes:
